# Asset-Change-Provider

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
aggregator/: main.py
aggregator/core/: settings.py
aggregator/gateways/binance/: base.py
aggregator/gateways/rabbit/: base.py  consumer.py  producer.py
aggregator/schemas/: models.py
provider/: main.py
provider/api/: depends.py  utils.py
provider/core/: price_processor.py  settings.py
provider/gateways/rabbitmq/: base.py  consumer.py  producer.py
provider/gateways/telegram/: client.py
provider/schemas/: enums.py  models.py  news.py
provider/services/: notification.py  subscription.py
scripts/: rabbit-init.sh
